# c-path-tracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
c-path-tracer/: CMakeLists.txt  c-path-tracer.c
path-tracer/: CMakeLists.txt  c11-threading.h  path-tracer.c  win32-threading.h
